welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:8: error: '(' expected but '{' found.
	else if {!weekday && vacation) {
                ^sleepIn:13: error: illegal start of simple expression
}
^